--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <div class="container"
-    <h1>Hello World</h1>
-    <a href="" class="btn btn-primary">Click</a>
+    <h1>Weather App</h1>
+    
   </div>
     <script src="src/index.js"></script>
   </body>
