--- a/index.html
+++ b/index.html
@@ -19,10 +19,137 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"
-<h1> Weather App</h1>
-    
-  </div>
+    <div id="root">
+      <div class="App">
+        <div class="container">
+          <div class="Weather">
+            <a
+              href="https://www.shecodes.io/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><img src="/images/logo.png" class="logo" alt="SheCodes Logo"
+            /></a>
+            <form>
+              <div class="row">
+                <div class="col-9">
+                  <input
+                    type="search"
+                    placeholder="Enter a city.."
+                    class="form-control search-input"
+                  />
+                </div>
+                <div class="col-3 p-0">
+                  <input
+                    type="submit"
+                    class="btn btn-primary w-100"
+                    value="Search"
+                  />
+                </div>
+              </div>
+            </form>
+            <div class="WeatherInfo">
+              <div class="row">
+                <div class="col-6">
+                  <h1>New York</h1>
+                  <ul>
+                    <li><span>Monday 09:49</span>, clear sky</li>
+                    <li>
+                      Humidity: <strong>48%</strong>, Wind:
+                      <strong>4.12km/h</strong>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-6">
+                  <div class="temperature-container d-flex justify-content-end">
+                    <canvas width="52" height="52"></canvas>
+                    <div>
+                      <span class="temperature">20</span
+                      ><span class="unit">°C</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="WeatherForecast row">
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Mon</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">29°</span
+                    ><span class="forecast-temperature-min">20°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Tue</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">30°</span
+                    ><span class="forecast-temperature-min">22°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Wed</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">32°</span
+                    ><span class="forecast-temperature-min">22°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Thu</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">26°</span
+                    ><span class="forecast-temperature-min">22°</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="WeatherForecastPreview">
+                  <div class="forecast-time">Fri</div>
+                  <canvas width="38" height="38"></canvas>
+                  <div class="forecast-temperature">
+                    <span class="forecast-temperature-max">27°</span
+                    ><span class="forecast-temperature-min">21°</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <footer>
+              This project was coded by
+              <a
+                href="https://www.shecodes.io/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >SheCodes</a
+              >
+              and is
+              <a
+                href="https://github.com/shecodesio/weather"
+                target="_blank"
+                rel="noopener noreferrer"
+                >open-sourced on GitHub</a
+              >
+              and
+              <a
+                href="https://shecodes-weather.netlify.app/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >hosted on Netlify</a
+              >
+            </footer>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
