--- a/index.html
+++ b/index.html
@@ -123,26 +123,12 @@
               </div>
             </div>
             <footer>
-              This project was coded by
+              This project was coded by Talina Dzhavakhadze and is
               <a
-                href="https://www.shecodes.io/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >SheCodes</a
-              >
-              and is
-              <a
-                href="https://github.com/shecodesio/weather"
+                href="https://github.com/Anilatta/vanilla-weather-app"
                 target="_blank"
                 rel="noopener noreferrer"
                 >open-sourced on GitHub</a
-              >
-              and
-              <a
-                href="https://shecodes-weather.netlify.app/"
-                target="_blank"
-                rel="noopener noreferrer"
-                >hosted on Netlify</a
               >
             </footer>
           </div>
