Update the time

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
                   <h1 id="city">New York</h1>
                   <ul>
                     <li>
-                      <span>Monday 09:49</span>,
-                      <span id="description">clear sky</span>
+                      Last updated:
+                      <span id="date">Monday 09:49</span>,
+                      <div id="description">clear sky</div>
                     </li>
                     <li>
                       Humidity: <strong><span id="humidity">48</span>%</strong>,
