--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                 <div class="col-6">
                   <div class="temperature-container d-flex justify-content-end">
                     <canvas width="52" height="52"></canvas>
+                    <img src="" alt="Clear" id="icon" class="float-left" />
                     <div>
                       <span class="temperature" id="temperature">20</span
                       ><span class="unit">°C</span>
