Add unit coversion

--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
                     <img src="" alt="Clear" id="icon" class="float-left" />
                     <div>
                       <span class="temperature" id="temperature">20</span
-                      ><span class="unit">°C</span>
+                      ><span class="unit"
+                        ><a href="#" id="celcius-link" class="active">°C</a>|<a
+                          href="#"
+                          id="fahrenheit-link"
+                          >°F</a
+                        ></span
+                      >
                     </div>
                   </div>
                 </div>
