m/s change +C added in forecast

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li>
                       Humidity: <strong><span id="humidity">48</span>%</strong>,
                       Wind:
-                      <strong><span id="wind">4.12</span>km/h</strong>
+                      <strong><span id="wind">4.12</span>m/s</strong>
                     </li>
                   </ul>
                 </div>
